[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

authors = ["SaelKimberly <sael.kimberly@yandex.ru>"]

homepage = "https://github.com/SaelKimberly/xray-rs"
repository = "https://github.com/SaelKimberly/xray-rs"

license-file = "LICENSE"
readme = "README.md"
