[package]
name = "xray-rs-sub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
# Async Dependencies
tokio = { version = "^1.50", default-features = false }

# Parsing
url = { version = "^2.5", default-features = false }
urlencoding = { version = "*" }
percent-encoding = { version = "*" }
uuid = { version = "^1.22", default-features = false }
nom = { version = "8.0.0" }
nom_locate = { version = "5.0.0" }
logos = { version = "^0.16" }
base64 = { version = "^0.22", default-features = false }
bstr = { version = "^1.12", default-features = false }
bytes = { version = "^1.11", default-features = false }

# HTTP Client
reqwest = { version = "^0.13", default-features = false, features = [
    "h2",
    "rustls",
    "gzip",
] }

# Custom
sha2 = { version = "^0.10", default-features = false }
rustls = { version = "^0.23", default-features = false }

# Error Handling
anyhow = { version = "^1.0" }
thiserror = { version = "^2.0" }

# Logging
tracing = { version = "^0.1" }

# Serialization
serde = { version = "^1.0", default-features = false, features = [
    "std",
    "derive",
] }
serde_json = { version = "^1.0", default-features = false, features = ["std"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3" }
tokio = { version = "*", default-features = false, features = ["macros"] }
