[package]
name = "xray-rs-tls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
blake2 = { version = "^0.10", default-features = false }
rand = { version = "^0.10", default-features = false, features = [
    "thread_rng",
] }
wide = { version = "^1.1", default-features = false }

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
path = "benches/salamander.rs"
name = "salamander_bench"
harness = false
